@@ -1,4 +1,4 @@
-momentuHMM 1.4.0 2018-02-14
+momentuHMM 1.4.0 2018-02-21
 -----------------
 NEW FEATURES
 
@@ -23,6 +23,8 @@ NEW FEATURES
 * sample size (n) argument added to AIC.momentuHMM for calculating small sample corrected AIC (i.e. AICc)
 
 * crawlPlot argument added to plot.crwData as a wrapper for crawl::crwPredictPlot
+
+* various graphical parameters added to plot.momentuHMM for plot customization
 
 CHANGES
 
